we need the same config fields for the product names as in SP-CSV